# WeKnora

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  README_JA.md  docker-compose.yml  go.mod  go.sum  rerank_server_demo.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: cnb.yml  docker-image.yml
client/: README.md  README_EN.md  chunk.go  client.go  evaluation.go  example.go  go.mod  knowledge.go  knowledgebase.go  message.go  model.go  session.go  tenant.go
cmd/server/: main.go
config/: config.yaml
dataset/: README  README_zh.md  qa_dataset.py
dataset/samples/: answers.parquet  corpus.parquet  qas.parquet  qrels.parquet  queries.parquet
docker/: Dockerfile.app  Dockerfile.docreader  docker-compose.minio.yml
docker/config/: supervisord.conf
docs/: API.md  QA.md  WeKnora.md  使用其他向量数据库.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: fonts.css
frontend/src/components/: Input-field.vue  doc-content.vue  empty-knowledge.vue  menu.vue  picture-preview.vue  upload-mask.vue
frontend/src/hooks/: useKnowledgeBase.ts
internal/common/: asyncq.go  tools.go
internal/config/: config.go
internal/container/: cleanup.go  container.go
internal/errors/: errors.go  session.go
internal/handler/: auth.go  chunk.go  evaluation.go  initialization.go  knowledge.go  knowledgebase.go  message.go  model.go  session.go  system.go  tenant.go  test_data.go
internal/logger/: logger.go
internal/middleware/: auth.go  error_handler.go  logger.go  recovery.go  trace.go
internal/router/: router.go  task.go
internal/runtime/: container.go
internal/stream/: factory.go  memory_manager.go  redis_manager.go
internal/tracing/: init.go
internal/types/: chat.go  chat_manage.go  chunk.go  cleanup.go  const.go  dataset.go  embedding.go  errors.go  evaluation.go  extract_graph.go  graph.go  json.go  knowledge.go  knowledgebase.go  message.go  model.go  retriever.go  search.go  session.go  tenant.go  user.go
internal/utils/: security.go
mcp-server/: .gitignore  CHANGELOG.md  EXAMPLES.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run.py  run_server.py  setup.py  test_imports.py  test_module.py  weknora_mcp_server.py
migrations/mysql/: 00-init-db.sql
migrations/paradedb/: 00-init-db.sql  01-migrate-to-paradedb.sql
scripts/: build_images.sh  get_version.sh  migrate.sh  start_all.sh
services/docreader/: Makefile  pyproject.toml  requirements.txt  supervisord.conf
services/docreader/scripts/: generate_proto.sh
services/docreader/src/: download_deps.py
services/docreader/src/client/: client.go  client_test.go
services/docreader/src/parser/: __init__.py  base_parser.py  caption.py  config.py  doc_parser.py  docx_parser.py  image_parser.py  image_utils.py  markdown_parser.py  ocr_engine.py  parser.py  pdf_parser.py  storage.py  text_parser.py  web_parser.py
services/docreader/src/proto/: docreader.pb.go  docreader.proto  docreader_grpc.pb.go  docreader_pb2_grpc.py
services/docreader/src/server/: server.py
services/docreader/src/testdata/: test.html  test.md  test.txt  test_download.txt
services/docreader/src/utils/: __init__.py  request.py
(+127 files in other folders)
